--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/owl.transitions.css" />
-		<link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
-		<link rel="stylesheet" type="text/css" href="css/animate.css" />
-		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<link rel="stylesheet" type="text/css" href="css/owl.transitions.css" onload="this.media='all'" />
+		<link rel="stylesheet" type="text/css" href="css/owl.carousel.css" onload="this.media='all'" />
+		<link rel="stylesheet" type="text/css" href="css/animate.css" onload="this.media='all'" />
+		<link rel="stylesheet" type="text/css" href="css/main.css"  onload="this.media='all'"/>
 
 
 	</head>
@@ -283,6 +283,10 @@
 
 
 	</body>
+	<script type="text/javascript"> 
+
+
+	</script>
 	<script type="text/javascript" defer src="js/jquery.js"></script>
 	<script type="text/javascript" defer src="js/ajaxchimp.js"></script>
 
