--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"  onload="this.media='all'">
 		<link rel="stylesheet" type="text/css" href="css/owl.transitions.css" onload="this.media='all'" />
 		<link rel="stylesheet" type="text/css" href="css/owl.carousel.css" onload="this.media='all'" />
 		<link rel="stylesheet" type="text/css" href="css/animate.css" onload="this.media='all'" />
