--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.css" onload="this.media='all'" />
-		<link rel="stylesheet" type="text/css" href="css/owl.transitions.css" onload="this.media='all'" />
-		<link rel="stylesheet" type="text/css" href="css/owl.carousel.css" onload="this.media='all'" />
-		<link rel="stylesheet" type="text/css" href="css/animate.css" onload="this.media='all'" />
-		<link rel="stylesheet" type="text/css" href="css/main.css"  onload="this.media='all'"/>
+		<!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css" onload="this.media='all'" /> -->
+		<link rel="preload" href="css/bootstrap.css" as="style" onload="this.rel='stylesheet'">
+		<!-- <link rel="stylesheet" type="text/css" href="css/owl.transitions.css" onload="this.media='all'" /> -->
+		<link rel="preload" href="css/owl.transitions.css" as="style" onload="this.rel='stylesheet'">
+		<!-- <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" onload="this.media='all'" /> -->
+		<link rel="preload" href="css/owl.carousel.css" as="style" onload="this.rel='stylesheet'">
+		<!-- <link rel="stylesheet" type="text/css" href="css/animate.css" onload="this.media='all'" /> -->
+		<link rel="preload" href="css/animate.css" as="style" onload="this.rel='stylesheet'">
+		<!-- <link rel="stylesheet" type="text/css" href="css/main.css"  onload="this.media='all'"/> -->
+		<link rel="preload" href="css/main.css" as="style" onload="this.rel='stylesheet'">
 
 
 	</head>
